--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.4",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
