--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
-    "web-vitals": "^2.1.4",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
