--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.1.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,9 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.16"
   }
 }
