--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.4",
     "socket.io": "^4.5.3",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "nodemon": "^2.0.19"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
   },
   "engines": {
     "node": "16.17.0",
